don’t translate keypresses after ‘f’ and similar commands

BUG:260655